[project]
name = "QtKit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rfletchr", email = "" }
]
requires-python = ">=3.11"
dependencies = [
    "pyside6>=6.11.0",
    "qtpy>=2.4.3",
    "requests>=2.33.1",
]


[tool.pyright]
# suppress errors on QtCore.Signal descriptors
reportPrivateImportUsage = "none"


[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"
